fixing spacing for admin tables

--- a/src/dashboard/src/app/hsb/admin/users/Users.module.scss
+++ b/src/dashboard/src/app/hsb/admin/users/Users.module.scss
@@ -96,7 +96,8 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid $medium-gray;
-  padding: 0 .5rem;
+  padding: 0.5rem;
+  gap: 1rem;
 
   &:hover {
     background-color: rgba($light-gray, 0.4);
@@ -104,5 +105,11 @@
   
   div {
     flex: 1;
+  }
+
+  input {
+    width: 100%;
+    max-width: 200px;
+    margin: 0;
   }
 }
